<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/interface2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:paddingRight="3dp"
        android:paddingTop="0dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:src="@drawable/button_return" />

        <TextView
            style="@style/style_tv_title"
            android:text="@string/tv_title_mesure" />


        <TextView
            android:id="@+id/tv_vider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_btn_vider"
            android:clickable="true"
            android:paddingBottom="2dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="2dp"
            android:text="@string/btn_vider"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:columnCount="2"
        android:orientation="horizontal"
        android:useDefaultMargins="true">

        <TableLayout
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@color/colorGridLayout1">

            <TableRow android:layout_margin="0dp">

                <TextView
                    style="@style/style_gridlayout_title"
                    android:background="@color/colorEXTEM"
                    android:text="@string/tv_EXTEM" />

                <TextView />
            </TableRow>

            <TableRow
                android:layout_margin="0dp"
                android:background="@color/colorGridLayout2">

                <TextView
                    style="@style/style_gridlayout_tv"
                    android:text="@string/tv_CT" />

                <EditText
                    android:id="@+id/et_ct_ext"
                    style="@style/style_gridlayout_et" />

            </TableRow>

            <TableRow android:layout_margin="0dp">

                <TextView
                    style="@style/style_gridlayout_tv"
                    android:text="@string/tv_A10" />

                <EditText
                    android:id="@+id/et_a10_ext"
                    style="@style/style_gridlayout_et" />
            </TableRow>

            <TableRow
                android:layout_margin="0dp"
                android:background="@color/colorGridLayout2">

                <TextView
                    style="@style/style_gridlayout_tv"
                    android:text="@string/tv_ML" />

                <EditText
                    android:id="@+id/et_ml_ext"
                    style="@style/style_gridlayout_et" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@color/colorGridLayout1">

            <TableRow>

                <TextView
                    style="@style/style_gridlayout_title"
                    android:background="@color/colorINTEM"
                    android:text="@string/tv_INTEM" />
            </TableRow>

            <TableRow android:background="@color/colorGridLayout2">

                <TextView
                    style="@style/style_gridlayout_tv"
                    android:text="@string/tv_CT" />

                <EditText
                    android:id="@+id/et_ct_int"
                    style="@style/style_gridlayout_et" />
            </TableRow>

            <TableRow android:layout_margin="0dp">

                <TextView
                    style="@style/style_gridlayout_tv"
                    android:text="@string/tv_A10"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/et_a10_int"
                    style="@style/style_gridlayout_et"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_margin="0dp"
                android:background="@color/colorGridLayout2">

                <TextView
                    style="@style/style_gridlayout_tv"
                    android:text="@string/tv_ML"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/et_ml_t"
                    style="@style/style_gridlayout_et"
                    android:visibility="invisible" />
            </TableRow>

        </TableLayout>

        <!--FIBTEM-->
        <TableLayout
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@color/colorGridLayout1">

            <TableRow>

                <TextView
                    style="@style/style_gridlayout_title"
                    android:background="@color/colorFIBTEM"
                    android:text="@string/tv_FIBTEM" />

            </TableRow>

            <TableRow android:background="@color/colorGridLayout2">

                <TextView
                    style="@style/style_gridlayout_tv"
                    android:text="@string/tv_CT" />

                <EditText
                    android:id="@+id/et_ct_fib"
                    style="@style/style_gridlayout_et" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/style_gridlayout_tv"
                    android:text="@string/tv_A10" />

                <EditText
                    android:id="@+id/et_a10_fib"
                    style="@style/style_gridlayout_et" />
            </TableRow>

            <TableRow android:background="@color/colorGridLayout2">

                <TextView
                    style="@style/style_gridlayout_tv"
                    android:text="@string/tv_ML" />

                <EditText
                    android:id="@+id/et_ml_fib"
                    style="@style/style_gridlayout_et" />
            </TableRow>

        </TableLayout>

        <!--HEPTEM-->
        <TableLayout
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@color/colorGridLayout1">

            <TableRow>

                <TextView
                    style="@style/style_gridlayout_title"
                    android:background="@color/colorHEPTEM"
                    android:text="@string/tv_HEPTEM"
                    android:textColor="@color/colorBlack" />
            </TableRow>

            <TableRow android:background="@color/colorGridLayout2">

                <TextView
                    style="@style/style_gridlayout_tv"
                    android:text="@string/tv_CT" />

                <EditText
                    android:id="@+id/et_ct_hep"
                    style="@style/style_gridlayout_et" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/style_gridlayout_tv"
                    android:text="@string/tv_A10" />

                <EditText
                    android:id="@+id/et_a10_hep"
                    style="@style/style_gridlayout_et" />
            </TableRow>

            <TableRow
                android:layout_margin="0dp"
                android:background="@color/colorGridLayout2">

                <TextView
                    style="@style/style_gridlayout_tv"
                    android:text="@string/tv_ML"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/et_ml_hep"
                    style="@style/style_gridlayout_et"
                    android:visibility="invisible" />
            </TableRow>

        </TableLayout>

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_proposition"
            style="@style/style_tv_title"
            android:text="@string/tv_title_resultat" />

        <TextView
            android:id="@+id/tv_nb_proposition"
            style="@style/style_tv_nb_result"
            android:text="0" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tests_normaux"
                style="@style/style_tv_result"
                android:text="@string/tv_tests_normaux" />

            <TextView
                android:id="@+id/tv_tests_normaux_detail"
                style="@style/style_tv_result"
                android:textSize="14dp"
                android:text="@string/tv_tests_normaux_detail"
                android:textColor="@color/colorBlack" />


            <CheckBox
                android:id="@+id/tv_protamine"
                style="@style/style_cb_result"
                android:text="@string/tv_protamine" />

            <CheckBox
                android:id="@+id/tv_tp"
                style="@style/style_cb_result"
                android:text="@string/tv_transfusion_plaquettaire" />


            <CheckBox
                android:id="@+id/tv_fibrinogene"
                style="@style/style_cb_result"
                android:text="@string/tv_fibrinogene" />

            <CheckBox
                android:id="@+id/tv_plasma"
                style="@style/style_cb_result"
                android:text="@string/tv_plasma" />


            <CheckBox
                android:id="@+id/tv_ccp"
                style="@style/style_cb_result"
                android:text="@string/tv_ccp" />

            <CheckBox
                android:id="@+id/tv_acide"
                style="@style/style_cb_result"
                android:text="@string/tv_acide" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>