<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp">

        <ImageView
            android:id="@+id/btn_version_rentrer"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:src="@drawable/button_return" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                style="@style/style_tv_coorTitle"
                android:text="Equipe Coordonnatrice : " />

            <TextView
                style="@style/style_tv_coorNom"
                android:text="Pr Bertrand Rozec  (coordonnateur)" />

            <TextView
                style="@style/style_tv_coor"
                android:text="bertrand.rozec@chu-nantes.fr\nTél : 02 40 16 53  04" />

            <TextView
                style="@style/style_tv_coorNom"
                android:text="Dr Jean-Christophe  Rigal" />

            <TextView
                style="@style/style_tv_coor"
                android:text="jeanchristophe.rigal@chu-nantes.fr" />

            <TextView
                style="@style/style_tv_coorNom"
                android:text="Dr Elodie Boissier (Biologiste)" />

            <TextView
                style="@style/style_tv_coor"
                android:text="elodie.boissier@chu-nantes.fr" />

            <TextView
                style="@style/style_tv_coorTitle"
                android:text="TECs centre coordonnateur :  " />

            <TextView
                style="@style/style_tv_coorNom"
                android:text="Laurence Larmet/Laurence Pacaud" />

            <TextView
                style="@style/style_tv_coor"
                android:text="Tél : 02 40 16 52 84\nlaurence.larmet@chu-nantes.fr\nlaurence.pacaud@chu-nantes.fr" />

            <TextView
                style="@style/style_tv_coorTitle"
                android:text="Chef de Projet : " />

            <TextView
                style="@style/style_tv_coorNom"
                android:text="Ingrid Bénard" />

            <TextView
                style="@style/style_tv_coor"
                android:text="Tél : 02 53 48 28 79\ningrid.benard@chu-nantes.fr" />

            <TextView
                style="@style/style_tv_coorTitle"
                android:text="ARC Moniteur :" />

            <TextView
                style="@style/style_tv_coorNom"
                android:text="Aurélie Gillet/ Mohamed Karoune" />

            <TextView
                style="@style/style_tv_coor"
                android:text="Tél : 06 22 03 37 06 / 06  23 48  98 67\naurelie.gillet@chu-nantes.fr\nmohamed.karoune@chu-nantes.fr" />

            <TextView
                style="@style/style_tv_coorTitle"
                android:text="Economiste :" />

            <TextView
                style="@style/style_tv_coorNom"
                android:text="Pr Isabelle Durand-Zaleski" />

            <TextView
                style="@style/style_tv_coor"
                android:text="isabelle.durand-zaleski-ext@aphp.fr" />

            <TextView
                style="@style/style_tv_coorTitle"
                android:text="Société TEM :" />

            <TextView
                style="@style/style_tv_coorNom"
                android:text="Anne-Sophie Rivereau " />

            <TextView
                style="@style/style_tv_coor"
                android:text="Tél : 06 14 41 96 05\nanne-sophie.rivereau@tem-international.fr" />

            <TextView
                style="@style/style_tv_coorTitle"
                android:text="Equipe Développement" />

            <TextView
                style="@style/style_tv_coorNom"
                android:text="@string/tv_version_tuteur" />

            <TextView
                style="@style/style_tv_coorNom"
                android:text="@string/tv_version_auteur" />

            <TextView
                style="@style/style_tv_coor"
                android:text="guoxin.sui@eleves.ec-nantes.fr\nxiaoqing.yang@eleves.ec-nantes.fr" />


            <ImageView
                android:layout_width="2000dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@drawable/imotec" />

            <TextView
                style="@style/style_tv_version"
                android:text="@string/tv_version_app" />

            <TextView
                style="@style/style_tv_version"
                android:text="@string/tv_version_requirement" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>